# autarco-scraper

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  Rocket.toml.example  autarco.toml.example  docker-compose.yml
src/: main.rs  update.rs
