[package]
name = "autarco-scraper"
version = "0.1.1"
authors = ["Paul van Tilburg <paul@luon.net>"]
edition = "2018"

[dependencies]
color-eyre = "0.5.6"
lazy_static = "1.4.0"
rocket = { version = "0.5.0-rc.1", features = ["json"] }
serde = "1.0.116"
toml = "0.5.6"
thirtyfour = { version = "0.25.0", features = ["tokio-runtime"] }
tokio = { version = "1.6.1", features = ["process"] }
