[package]
name = "autarco-scraper"
version = "0.1.1"
authors = ["Paul van Tilburg <paul@luon.net>"]
edition = "2021"
description = """"
Web service that provides a REST API layer over the My Autarco site/API to get
statistical data of your solar panels.
"""
readme = "README.md"
repository = "https://git.luon.net/paul/autarco-scraper"
license = "MIT"

[dependencies]
color-eyre = "0.5.6"
once_cell = "1.9.0"
reqwest = { version = "0.11.6", features = ["cookies", "json"] }
rocket = { version = "0.5.0-rc.2", features = ["json"] }
serde = "1.0.116"
toml = "0.5.6"
url = "2.2.2"
